--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@tinymce/tinymce-angular": "^4.2.4",
     "ng-zorro-antd": "^12.0.2",
     "rxjs": "~6.6.0",
+    "tinymce": "^5.10.2",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
