--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.1.0",
     "@tinymce/tinymce-angular": "^4.2.4",
     "ng-zorro-antd": "^12.0.2",
+    "ng2-ckeditor": "^1.2.9",
     "rxjs": "~6.6.0",
     "tinymce": "^5.10.2",
     "tslib": "^2.2.0",
